alloy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy
  namespace: monitoring
  labels:
    app: alloy
spec:
  ports:
    - name: otlp-http
      port: 4318
      targetPort: otlp-http
    - name: metrics
      port: 12345
      targetPort: metrics
  selector:
    app: alloy
