alloy/httproute-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy-http
spec:
  hostnames:
  - alloy.hellnet.com.br
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: pve
    namespace: kube-system
    sectionName: otlp-http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: alloy
      port: 4318
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
